--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ aio = [
 docs = [
     "furo>=2024.8.6",
     "sphinx>=8.2.3",
-    "sphinx-autodoc-typehints>=3.2.0"
+    "sphinx-autodoc-typehints>=3.2.0",
 ]
 tests = [
     "pytest>=8.4.1",
