--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "autumn"
-version = "0.1.0a"
+version = "1.0.0"
 description = "A thin wrapper around Autumn's REST API"
 readme = "README.md"
 requires-python = ">=3.11"
