--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "autumn"
 version = "1.2.1"
 description = "A Python SDK for Autumn's REST API"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 dependencies = [
     "pydantic>=2.11.5",
     "requests>=2.32.3",
@@ -15,7 +15,7 @@ aio = [
 ]
 asgi = [
     "starlette>=0.47.0",
-    "aiohttp>=3.12.8"
+    "aiohttp>=3.12.8",
 ]
 docs = [
     "furo>=2024.8.6",
