--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,41 @@
 [project]
-name = "autumn"
+name = "autumn-py"
 version = "1.2.1"
 description = "A Python SDK for Autumn's REST API"
 readme = "README.md"
-requires-python = ">=3.11"
-dependencies = [
-    "pydantic>=2.11.5",
-    "requests>=2.32.3",
+license = "MIT"
+keywords = ["autumn", "payments", "stripe"]
+classifiers = [
+  "Development Status :: 5 - Production/Stable",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: Implementation :: CPython",
 ]
+requires-python = ">=3.9"
+dependencies = [
+    "pydantic>=2.11.7",
+    "requests>=2.32.4",
+]
+
+[project.urls]
+GitHub = "https://github.com/justanotherbyte/autumn"
+Documentation = "https://autumn-sdk-unofficial.readthedocs.io"
 
 [project.optional-dependencies]
 aio = [
-    "aiohttp>=3.12.8",
+    "aiohttp>=3.12.13",
 ]
 asgi = [
-    "starlette>=0.47.0",
-    "aiohttp>=3.12.8",
+    "aiohttp>=3.12.13",
+    "starlette>=0.47.1",
 ]
 docs = [
     "furo>=2024.8.6",
-    "sphinx>=8.2.3",
-    "sphinx-autodoc-typehints>=3.2.0",
+    "sphinx>=7.4.7",
+    "sphinx-autodoc-typehints>=2.3.0",
     "sphinx-tabs>=3.4.7",
 ]
 tests = [
@@ -39,3 +54,7 @@ pythonpath = [
 
 [tool.pyright]
 typeCheckingMode = "standard"
+
+[build-system]
+requires = ["hatchling >= 1.26"]
+build-backend = "hatchling.build"
