--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "autumn-py"
-version = "1.3.2.post1"
+version = "1.3.3"
 description = "A Python SDK for Autumn's REST API"
 readme = "README.md"
 license = "MIT"
