--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ requires-python = ">=3.9"
 dependencies = ["pydantic>=2.11.7", "requests>=2.32.4"]
 
 [project.urls]
-Source = "https://github.com/justanotherbyte/autumn"
+Source = "https://github.com/useautumn/autumn-py"
 Documentation = "https://autumn-py.readthedocs.io"
 
 [project.optional-dependencies]
