--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,32 +1,35 @@
 name: Run Tests
 
 on:
-    pull_request:
-        types: [ opened, reopened, synchronize ]
+  pull_request:
+    types: [opened, reopened, synchronize]
 
 jobs:
-    test:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Install uv
-              uses: astral-sh/setup-uv@v6
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
 
-            - name: Setup Python
-              uses: actions/setup-python@v5
-              with:
-                python-version: 3.9
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.9
 
-            - name: Install dependencies
-              run: uv pip install -r pyproject.toml --extra tests
+      - name: Create virtual environment
+        run: uv venv
 
-            - name: Run Library Tests
-              run: uv run pytest
+      - name: Install dependencies
+        run: uv pip install -r pyproject.toml --extra tests
 
-            - name: Can Docs Build
-              run: |
-                uv pip install -r pyproject.toml --extra docs
-                cd docs/
-                uv run make html
+      - name: Run Library Tests
+        run: uv run pytest
+
+      - name: Can Docs Build
+        run: |
+          uv pip install -r pyproject.toml --extra docs
+          cd docs/
+          uv run make html
