--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [project]
 name = "autumn-py"
-version = "1.5.2"
 description = "A Python SDK for Autumn's REST API"
 readme = "README.md"
 license = "MIT"
@@ -20,6 +19,7 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = ["pydantic>=2.11.7", "requests>=2.32.4"]
+dynamic = ["version"]
 
 [project.urls]
 Source = "https://github.com/useautumn/autumn-py"
