--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,16 @@ docs = [
     "sphinx-autodoc-typehints>=2.3.0",
     "sphinx-tabs>=3.4.7",
 ]
-tests = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]
+tests = [
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.1.0",
+    "pytest-cov>=6.2.1",
+]
 dev = ["litestar>=2.16.0", "uvicorn>=0.34.3"]
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
+asyncio_mode = "auto"
 
 [tool.pyright]
 typeCheckingMode = "standard"
@@ -52,3 +57,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["autumn/"]
+
+[tool.hatch.version]
+path = "autumn/__init__.py"
