--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,8 @@ jobs:
         run: uv venv
 
       - name: Install dependencies
-        run: uv pip install -r pyproject.toml --extra tests
+        run: |
+          uv pip install -r pyproject.toml --extra tests --extra aio
 
       - name: Run Library Tests
         run: uv run pytest
