--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,9 @@ jobs:
               with:
                 python-version-file: "pyproject.toml"
 
+            - name: Create Virtual Environment
+              run: uv venv
+
             - name: Install dependencies
               run: |
                 uv pip install -r pyproject.toml --extra tests --extra aio
