--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv pip install -r pyproject.toml --extra tests --extra aio
+          uv pip install -r pyproject.toml --extra tests --extra aio --extra asgi
 
       - name: Run Library Tests
         run: uv run pytest
