--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
 
             - name: Install dependencies
               run: |
-                uv pip install -r pyproject.toml --extra tests --extra aio
+                uv pip install -r pyproject.toml --extra tests --extra aio --extra asgi
 
             - name: Run Tests
               run: uv run pytest
